# T-Display-S3-AMOLED-1.43-1.75

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  platformio.ini  sdkconfig.defaults
Shell/: Bracket.stl  Transparent Shell.stl
components/private_library/: pin_config.h
examples/Deep_Sleep_PCF8563_Timer_Wake_Up/: Deep_Sleep_PCF8563_Timer_Wake_Up.ino
examples/Deep_Sleep_Wake_Up/: Deep_Sleep_Wake_Up.ino
examples/Deep_Sleep_Wake_Up_H0175Y003AM/: Deep_Sleep_Wake_Up_H0175Y003AM.ino
examples/Dragon_ball_radar/: Dragon_ball_radar.ino
examples/FT3168/: FT3168.ino
examples/GFX/: GFX.ino
examples/GFX_FT3168_Image/: GFX_FT3168_Image.ino
examples/Light_Sleep_Wake_Up/: Light_Sleep_Wake_Up.ino
examples/Light_Sleep_Wake_Up_H0175Y003AM/: Light_Sleep_Wake_Up_H0175Y003AM.ino
examples/Original_Test/: Original_Test.ino
examples/Original_Test_DO0143FMST10/: Original_Test_DO0143FMST10.ino
examples/Original_Test_H0175Y003AM/: Original_Test_H0175Y003AM.ino  Original_Test_H0175Y003AMV0 copy.inobck
examples/PCF8563/: PCF8563.ino
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/examples/iic_scan/: main.cpp
main/examples/screen_lvgl/: main.cpp
main/examples/screen_touch_lvgl/: image_rgb565_16bit_471x467px.h  image_rgb565_16bit_473x467px.h  main.cpp
main/examples/screen_touch_lvgl_9/: main.cpp
main/examples/touch/: main.cpp
structure/: 1.75_inch_screen_enclosure_design_reference_1.stp  1.75_inch_screen_enclosure_design_reference_2.stp  3D_PCB_T-Display-S3-AMOLED-1.43-1.75_V1.0_202504081815.step  Complete Set.stl  H741-1.stp
(+13 files in other folders)
